--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -1,6 +1,4 @@
 name: Run tests on any Push event
-# Запуск при любом push евенте в любой ветке, за исключением релизных тэгов.
-# Они будт тестироваться перед сборкой
 on:
   push:
     tags:
@@ -11,23 +9,20 @@ jobs:
   run_tests:
     runs-on: [ubuntu-latest]
     steps:
-      # Чекаутим код
       - uses: actions/checkout@master
-      # Устанавливаем python нужной версии
       - uses: actions/setup-python@v1
         with:
           python-version: '3.8'
           architecture: 'x64'
       - name: Install requirements
-        # Устанавливаем зависимости
         run: pip install -r requirements.txt
       - name: Run tests
         run: coverage run tests.py
       - name: Tests report
         run: coverage report
-      - name: "telegram Notification"
+      - name: Telegram notification
         uses: "appleboy/telegram-action@master"
         with:
           to: ${{ secrets.TELEGRAM_GROUP }}
           token: ${{ secrets.TELEGRAM_BOT}}
-          args: Commit publish ${{ github.event.commits[0].message }}
+          args: Test results ${ coverage report }
