--- a/.github/workflows/pub_on_release.yaml
+++ b/.github/workflows/pub_on_release.yaml
@@ -3,16 +3,34 @@ on:
   release:
     types: [published]
 
-build_and_pub:
-  needs: [run_tests]
-
-env:
-  LOGIN: ${{ secrets.DOCKER_LOGIN }}
-  NAME: ${{ secrets.DOCKER_NAME }}
 
 jobs:
   run_tests:
-    runs-on: [ubuntu-latest]
+    runs-on: [ ubuntu-latest ]
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-python@v1
+        with:
+          python-version: '3.8'
+          architecture: 'x64'
+      - name: Install requirements
+        run: pip install -r requirements.txt
+      - name: Run tests
+        run: coverage run tests.py
+      - name: Tests report
+        run: coverage report
+      - name: Telegram notification
+        uses: "appleboy/telegram-action@master"
+        with:
+          to: ${{ secrets.TELEGRAM_GROUP }}
+          token: ${{ secrets.TELEGRAM_BOT}}
+          args: Тесты перед публикацией пройдены
+
+  build_and_pub:
+      needs: [ run_tests ]
+    env:
+      LOGIN: ${{ secrets.DOCKER_LOGIN }}
+      NAME: ${{ secrets.DOCKER_NAME }}
     steps:
       - name: Login to docker.io
         run: echo ${{ secrets.DOCKER_PWD }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
