--- a/.github/workflows/pub_on_release.yaml
+++ b/.github/workflows/pub_on_release.yaml
@@ -1,10 +1,12 @@
 name: Run tests on published event
 on:
-  release:
-    types: [published]
+  push:
+    tags:
+      - 'v*'
+
 jobs:
-  run_tests:
-    runs-on: [ ubuntu-latest ]
+  prepub_tests:
+    runs-on: [ubuntu-latest]
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-python@v1
@@ -23,8 +25,9 @@ jobs:
           to: ${{ secrets.TELEGRAM_GROUP }}
           token: ${{ secrets.TELEGRAM_BOT}}
           args: Тесты перед публикацией пройдены
+
   build_and_pub:
-      needs: [ run_tests ]
+      needs: [ prepub_tests ]
     env:
       LOGIN: ${{ secrets.DOCKER_LOGIN }}
       NAME: ${{ secrets.DOCKER_NAME }}
