--- a/.github/workflows/pub_on_release.yml
+++ b/.github/workflows/pub_on_release.yml
@@ -2,7 +2,7 @@ name: Run tests on published event
 on:
   push:
     tags:
-      - 'v*'
+      - 'l*'
 
 jobs:
   prepub_tests:
@@ -37,9 +37,9 @@ jobs:
         run: echo ${{ secrets.DOCKER_PWD }} | docker login -u ${{ secrets.DOCKER_LOGIN }} --password-stdin
       - uses: actions/checkout@master
       - name: Build image
-        run: docker build -t $LOGIN/$NAME:${GITHUB_REF:11} -f Dockerfile .
+        run: docker build -t $LOGIN/$NAME:latest -f Dockerfile .
       - name: Push image to docker.io
-        run: docker push $LOGIN/$NAME:${GITHUB_REF:11}
+        run: docker push $LOGIN/$NAME:latest
       - name: Telegram notification
         uses: "appleboy/telegram-action@master"
         with:
